<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@android:color/darker_gray"
        android:transitionName="animation" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loadingView"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:indicatorColor="@color/purple_700"
        app:indicatorName="BallScaleIndicator" />


</RelativeLayout>