...
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <it.mike5v.viewmoretextview.ViewMoreTextView
                android:id="@+id/viewMoreTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTV"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="16dp"
...
